fixed media stretch bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -196,7 +196,6 @@ body {
     background-image: linear-gradient(90deg, #43C6AC, #F8FFAE);
     position: relative;
     display: block;
-    padding-bottom: 100px;
 }
 
 .carousel-item img {
@@ -207,7 +206,11 @@ body {
 
 .carousel-caption p {
     opacity: .7;
-    color:black;
+    /* color:black; */
+}
+
+.caption-dark {
+    color: black;
 }
 
 @media (max-width: 575.98px) {
